<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <include layout="@layout/titlebar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="71px"
        android:layout_marginRight="71px"
        android:layout_marginTop="73px"
        android:background="@drawable/background"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/ll_recored"
            android:layout_width="match_parent"
            android:layout_height="131px"
            android:layout_marginLeft="28px"
            android:layout_marginRight="28px"
            android:layout_marginTop="46px"
            android:background="@drawable/background1"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginLeft="70px"
                android:src="@drawable/user_id"/>

            <EditText
                android:id="@+id/login_userTel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="70px"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:hint="@string/login_userID"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/text_787878"
                android:textSize="@dimen/text_Size40"/>

            <LinearLayout
                android:id="@+id/login_userTel_del"
                android:layout_width="130px"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/shape_user_tel_del"
                    android:gravity="center"
                    android:text="×"
                    android:textColor="@color/text_df1122"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_arrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:paddingLeft="12dp"
                android:paddingRight="13dp">

                <ImageView
                    android:id="@+id/iv_arrow"
                    android:layout_width="15dp"
                    android:layout_height="7dp"
                    android:background="@mipmap/bottom_arrow"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="131px"
            android:layout_marginLeft="28px"
            android:layout_marginRight="28px"
            android:layout_marginTop="90px"
            android:background="@drawable/background1"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="70px"
                android:src="@drawable/user_pwd"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70px"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/login_userPwd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="left|center_vertical"
                    android:hint="请输入您的密码"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="14"
                    android:singleLine="true"
                    android:textColor="@color/text_787878"
                    android:textSize="@dimen/text_Size40"/>
                <LinearLayout
                    android:id="@+id/login_pwd_del"
                    android:layout_width="130px"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/shape_user_tel_del"
                        android:gravity="center"
                        android:text="×"
                        android:textColor="@color/text_df1122"/>

                </LinearLayout>

                <!--<ImageView
                    android:id="@+id/login_show_password"
                    android:layout_width="150px"
                    android:layout_height="68px"
                    android:layout_marginRight="25px"
                    android:layout_marginTop="10px"
                    android:gravity="center_vertical"
                    android:src="@drawable/select_show_password" />-->
                <CheckBox
                    android:id="@+id/check_box1"
                    android:layout_width="200px"
                    android:layout_height="100px"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10px"
                    android:background="@drawable/select_show_password"
                    android:button="@null"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180px"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/set_weixin_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="28px"
                    android:gravity="center_vertical"
                    android:text="已在微信注册设置密码"
                    android:textColor="@color/text_212121"
                    android:textSize="@dimen/text_Size36"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="28px"
                    android:background="#545454"/>
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <LinearLayout
                android:id="@+id/forgot_psd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="28px"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/forgot_password"
                    android:textColor="@color/text_212121"
                    android:textSize="@dimen/ts26"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#545454"/>
                <!--下划线-->
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:layout_marginLeft="71px"
        android:layout_marginRight="71px"
        android:layout_marginTop="70px"
        android:background="@drawable/select_login_btn"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/text_FBFEFD"
        android:textSize="@dimen/ts30"/>

    <Button
        android:id="@+id/new_user_zc"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:layout_marginLeft="71px"
        android:layout_marginRight="71px"
        android:layout_marginTop="70px"
        android:background="@drawable/new_userzc_btn"
        android:gravity="center"
        android:text="@string/new_user_register"
        android:textColor="@color/black"
        android:textSize="@dimen/text_Size40"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/speedy_regidter_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="70px"
        android:text="快速注册>>"
        android:textColor="@color/text_212121"
        android:textSize="@dimen/text_Size42"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="71px"
        android:layout_marginRight="71px"
        android:layout_marginTop="124px"
        android:gravity="center_vertical"
        android:visibility="invisible">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#E2E2E2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/other_account_login"
            android:textColor="@color/text_666666"
            android:textSize="@dimen/text_Size28"
          />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#E2E2E2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160px"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="72px"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible">
        <!--QQ登录-->
        <ImageView
            android:id="@+id/login_qq"
            android:layout_width="157px"
            android:layout_height="157px"
            android:layout_weight="1"/>
        <!--微信登录-->
        <ImageView
            android:id="@+id/login_weixin"
            android:layout_width="157px"
            android:layout_height="157px"
            android:layout_weight="1"
            android:src="@drawable/weixin"/>
        <!--微博登录-->
        <ImageView
            android:id="@+id/login_weibo"
            android:layout_width="157px"
            android:layout_height="157px"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>